--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-slick": "^0.31.0",
+    "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
