--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,23 +11,34 @@
     "tw:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-slick": "^0.31.0",
     "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/node": "^24.8.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/react-slick": "^0.23.13",
@@ -39,6 +50,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
