--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,2 @@
-# VITE_API_URL=https://qubit-e-com-website.onrender.com/api
-VITE_API_URL=http://localhost:4000/api
+VITE_API_URL=https://qubit-e-com-website.onrender.com/api
+# VITE_API_URL=http://localhost:4000/api
